<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/colorAccent">

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@drawable/circle_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="30dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/signup"
                    android:textColor="@color/colorBlueDark"
                    android:textSize="20dp" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_mail"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:hint="E-mail"
                        android:inputType="text"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutUsername"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_sad"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:hint="Username"
                        android:focusable="false"
                        android:clickable="false"
                        android:editable="false"
                        android:inputType="none"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_pass"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editPasswordConfirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_pass"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:hint="Confirm Password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardViewRegister"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:transitionName="@string/shared_transaction"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/register"
                            android:textColor="#fff"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/textRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/TnC"
                    android:textColor="@color/colorGray" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>

</ScrollView>